fix style on safari

--- a/src/app/styles/Header.module.css
+++ b/src/app/styles/Header.module.css
@@ -41,6 +41,7 @@
 
 .page-navbar-link {
     align-content: center;
+    -webkit-align-content: center;
     padding: 0 0.5rem;
     height: 100%;
     color: white;
