--- a/src/app/styles/SkillList.module.css
+++ b/src/app/styles/SkillList.module.css
@@ -9,5 +9,6 @@
 .icons > span {
   font-size: small;
   align-content: end;
+  -webkit-align-content: end;
   font-weight: bold;
 }
