--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -14,6 +14,13 @@ body {
   background-repeat: no-repeat;
   background-position: top left;
   background-attachment: fixed;
+  -webkit-background-attachment: fixed;
+}
+
+@media screen and (max-width: 450px) {
+  body {
+    background-position-x: -15vw;
+  }
 }
 
 header > div, main, footer {
